# apps-android-wikipedia-copy

./: .bazelrc  .buckconfig  .buckconfig.local  .gitignore  MODULE.bazel  WORKSPACE  bazel-apps-android-wikipedia-copy  bazel-bin  bazel-out  bazel-testlogs  create_android_library_target.py  fetch_all.sh  generate_external_deps.py  modify_pom_versions.py  modify_pom_versions_string.py
.github/workflows/: android.yml  android_branch.yml  android_offline_test.yml  android_pr.yml  android_smoke_test.yml
app/: BUCK  BUILD.bazel  build.gradle
app/libs/: external_deps.txt
app/libs/androidx/appcompat/appcompat/: BUCK
app/libs/androidx/appcompat/appcompat-resources/: BUCK
app/libs/androidx/asynclayoutinflater/asynclayoutinflater/: BUCK
app/libs/androidx/browser/browser/: BUCK
app/libs/androidx/cardview/cardview/: BUCK
app/libs/androidx/concurrent/concurrent-futures/: BUCK
app/libs/androidx/concurrent/concurrent-futures-ktx/: BUCK
app/libs/androidx/constraintlayout/constraintlayout/: BUCK
app/libs/androidx/constraintlayout/constraintlayout-core/: BUCK
app/libs/androidx/constraintlayout/constraintlayout-solver/: BUCK
app/libs/androidx/coordinatorlayout/coordinatorlayout/: BUCK
app/libs/androidx/core/core/: BUCK
app/libs/androidx/core/core-ktx/: BUCK
app/libs/androidx/cursoradapter/cursoradapter/: BUCK
app/libs/androidx/customview/customview/: BUCK
app/libs/androidx/databinding/databinding-adapters/: BUCK
app/libs/androidx/databinding/databinding-common/: BUCK
app/libs/androidx/databinding/databinding-compiler/: BUCK
app/libs/androidx/databinding/databinding-compiler-common/: BUCK
app/libs/androidx/databinding/databinding-runtime/: BUCK
app/libs/androidx/databinding/viewbinding/: BUCK
app/libs/androidx/documentfile/documentfile/: BUCK
app/libs/androidx/drawerlayout/drawerlayout/: BUCK
app/libs/androidx/dynamicanimation/dynamicanimation/: BUCK
app/libs/androidx/emoji2/emoji2/: BUCK
app/libs/androidx/emoji2/emoji2-views-helper/: BUCK
app/libs/androidx/exifinterface/exifinterface/: BUCK
app/libs/androidx/fragment/fragment/: BUCK
app/libs/androidx/fragment/fragment-ktx/: BUCK
app/libs/androidx/legacy/legacy-support-core-ui/: BUCK
app/libs/androidx/legacy/legacy-support-core-utils/: BUCK
app/libs/androidx/lifecycle/lifecycle-common/: BUCK
app/libs/androidx/lifecycle/lifecycle-common-jvm/: BUCK
app/libs/androidx/lifecycle/lifecycle-livedata/: BUCK
app/libs/androidx/lifecycle/lifecycle-livedata-core/: BUCK
app/libs/androidx/lifecycle/lifecycle-livedata-core-ktx/: BUCK
app/libs/androidx/lifecycle/lifecycle-livedata-ktx/: BUCK
app/libs/androidx/lifecycle/lifecycle-runtime/: BUCK
app/libs/androidx/lifecycle/lifecycle-runtime-android/: BUCK
app/libs/androidx/lifecycle/lifecycle-runtime-compose-android/: BUCK
app/libs/androidx/lifecycle/lifecycle-runtime-desktop/: BUCK
app/libs/androidx/lifecycle/lifecycle-runtime-ktx/: BUCK
app/libs/androidx/lifecycle/lifecycle-runtime-ktx-android/: BUCK
app/libs/androidx/lifecycle/lifecycle-service/: BUCK
app/libs/androidx/lifecycle/lifecycle-viewmodel/: BUCK
app/libs/androidx/lifecycle/lifecycle-viewmodel-android/: BUCK
app/libs/androidx/lifecycle/lifecycle-viewmodel-compose/: BUCK
app/libs/androidx/lifecycle/lifecycle-viewmodel-compose-android/: BUCK
app/libs/androidx/lifecycle/lifecycle-viewmodel-desktop/: BUCK
app/libs/androidx/lifecycle/lifecycle-viewmodel-savedstate/: BUCK
app/libs/androidx/lifecycle/lifecycle-viewmodel-savedstate-android/: BUCK
app/libs/androidx/loader/loader/: BUCK
app/libs/androidx/localbroadcastmanager/localbroadcastmanager/: BUCK
app/libs/androidx/navigation/navigation-common/: BUCK
app/libs/androidx/navigation/navigation-common-android/: BUCK
app/libs/androidx/navigation/navigation-compose/: BUCK
app/libs/androidx/navigation/navigation-compose-android/: BUCK
app/libs/androidx/navigation/navigation-runtime/: BUCK
app/libs/androidx/navigation/navigation-runtime-android/: BUCK
app/libs/androidx/paging/paging-common/: BUCK
app/libs/androidx/paging/paging-common-jvm/: BUCK
app/libs/androidx/paging/paging-common-ktx/: BUCK
app/libs/androidx/paging/paging-runtime/: BUCK
app/libs/androidx/paging/paging-runtime-ktx/: BUCK
app/libs/androidx/palette/palette/: BUCK
app/libs/androidx/palette/palette-ktx/: BUCK
app/libs/androidx/preference/preference/: BUCK
app/libs/androidx/preference/preference-ktx/: BUCK
app/libs/androidx/print/print/: BUCK
app/libs/androidx/profileinstaller/profileinstaller/: BUCK
app/libs/androidx/recyclerview/recyclerview/: BUCK
app/libs/androidx/resourceinspection/resourceinspection-annotation/: BUCK
app/libs/androidx/room/room-common/: BUCK
app/libs/androidx/room/room-common-jvm/: BUCK
app/libs/androidx/room/room-compiler/: BUCK
app/libs/androidx/room/room-compiler-processing/: BUCK
app/libs/androidx/room/room-external-antlr/: BUCK
app/libs/androidx/room/room-ktx/: BUCK
app/libs/androidx/room/room-migration/: BUCK
app/libs/androidx/room/room-migration-jvm/: BUCK
app/libs/androidx/room/room-runtime/: BUCK
app/libs/androidx/room/room-runtime-android/: BUCK
app/libs/androidx/room/room-testing/: BUCK
app/libs/androidx/room/room-testing-android/: BUCK
app/libs/androidx/savedstate/savedstate/: BUCK
app/libs/androidx/savedstate/savedstate-android/: BUCK
app/libs/androidx/savedstate/savedstate-compose-android/: BUCK
app/libs/androidx/savedstate/savedstate-ktx/: BUCK
app/libs/commons-codec/commons-codec/: BUCK
app/libs/commons-io/commons-io/: BUCK
app/libs/commons-logging/commons-logging/: BUCK
app/src/main/: AndroidManifest.xml
gradle/: libs.versions.toml
profiler/: base_kicker.py  build_html_visualiser.py  build_insights_template.html  build_performance_report.html  build_performance_report_comment.html  build_report_template.html  build_script.py  build_stats_table_template.html  build_visualiser.py  function_kicker.py  incremental_build_times.csv  incremental_build_times.csv.bak  incremental_build_times_comment.csv  kicker_interface.py
(+722 files in other folders)
