bazel_dep(name = "rules_android", version = "0.6.6")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_kotlin", version = "2.1.9")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_java", version = "8.13.0")

#register_toolchains("//app:kotlin_toolchain_19")

remote_android_extensions = use_extension(
    "@rules_android//bzlmod_extensions:android_extensions.bzl",
    "remote_android_tools_extensions")
use_repo(remote_android_extensions, "android_tools")

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

rules_kotlin_extensions = use_extension("@rules_kotlin//src/main/starlark/core/repositories:bzlmod_setup.bzl", "rules_kotlin_extensions")
rules_kotlin_extensions.kotlinc_version(
    version = "2.1.0",
    sha256 = "b6698d5728ad8f9edcdd01617d638073191d8a03139cc538a391b4e3759ad297"
)
use_repo(rules_kotlin_extensions, "com_github_google_ksp", "com_github_jetbrains_kotlin", "com_github_jetbrains_kotlin_git", "com_github_pinterest_ktlint", "kotlinx_serialization_core_jvm", "kotlinx_serialization_json", "kotlinx_serialization_json_jvm")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.maplibre.gl:android-sdk:11.13.0@aar",
        "org.maplibre.gl:android-plugin-annotation-v9:3.0.2@aar",
        "androidx.navigation:navigation-compose:2.9.3@aar",
        "androidx.room:room-compiler:2.7.2",
        "androidx.room:room-ktx:2.7.2@aar",
        "androidx.room:room-runtime:2.7.2@aar",
        "com.github.skydoves:balloon:1.6.12@aar",
        "androidx.browser:browser:1.8.0@aar",
        "io.coil-kt.coil3:coil-gif:3.2.0@aar",
        "com.google.android.gms:play-services-wallet:19.4.0@aar",
        "com.google.firebase:firebase-messaging-ktx:24.1.2@aar",
        "com.google.mlkit:language-id:17.0.6@aar",
        "org.apache.commons:commons-lang3:3.18.0",
        "androidx.constraintlayout:constraintlayout:2.2.1@aar",
        "androidx.core:core-ktx:1.16.0@aar",
        "androidx.appcompat:appcompat:1.7.1@aar",
        "androidx.drawerlayout:drawerlayout:1.2.0@aar",
        "com.google.android.flexbox:flexbox:3.0.0@aar",
        "androidx.fragment:fragment-ktx:1.8.8@aar",
        "com.google.gms:google-services:4.4.3",
        "com.android.installreferrer:installreferrer:2.2@aar",
        "org.jsoup:jsoup:1.21.1",
        "org.jetbrains.kotlin:kotlin-serialization:2.1.0",
        "org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.1.0",
        "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.10.2",
        "org.jetbrains.kotlinx:kotlinx-serialization-json-jvm:1.9.0",
        "com.squareup.leakcanary:leakcanary-android:2.14@aar",
        "com.google.android.material:material:1.12.0@aar",
        "org.wikimedia.metrics:metrics-platform:2.9",
        "com.squareup.okhttp3:okhttp-tls:4.12.0",
        "com.squareup.okhttp3:logging-interceptor:4.12.0",
        "com.squareup.okhttp3:okhttp:4.12.0",
        "androidx.palette:palette-ktx:1.0.0@aar",
        "androidx.paging:paging-runtime-ktx:3.3.6@aar",
        "io.getstream:photoview:1.0.3@aar",
        "com.squareup.leakcanary:plumber-android:2.14@aar",
        "androidx.preference:preference-ktx:1.2.1@aar",
        "androidx.recyclerview:recyclerview:1.4.0@aar",
        "com.squareup.retrofit2:retrofit:2.11.0",
        "com.squareup.retrofit2:converter-kotlinx-serialization:2.11.0",
        "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0@aar",
        "androidx.viewpager2:viewpager2:1.1.0@aar",
        "androidx.work:work-runtime-ktx:2.10.3@aar",
        "androidx.activity:activity-compose:1.10.1@aar",
        "androidx.lifecycle:lifecycle-viewmodel-compose:2.9.2@aar",
        "androidx.compose.material3:material3:1.3.2@aar",
        "androidx.compose.ui:ui:1.8.3@aar",
        "androidx.compose.ui:ui-tooling-preview:1.8.3@aar",
        "androidx.compose.ui:ui-tooling:1.8.3@aar",
        "org.jetbrains.kotlin:kotlin-compose-compiler-plugin-embeddable:2.1.0",
        "org.jetbrains.kotlin:kotlin-parcelize-compiler:2.1.0",
        "org.jetbrains.kotlin:kotlin-parcelize-runtime:2.1.0",
        "androidx.databinding:databinding-runtime:8.9.1@aar",
        "io.coil-kt.coil3:coil-core-android:3.2.0@aar",
        "io.coil-kt.coil3:coil-compose-android:3.2.0@aar",
        "io.coil-kt.coil3:coil-network-okhttp-jvm:3.2.0",
        "io.coil-kt.coil3:coil-svg-android:3.2.0@aar",
        "androidx.lifecycle:lifecycle-viewmodel:2.9.2@aar",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://maven.google.com",
    ],
    version_conflict_policy = "default",
    additional_coursier_options = [
        "-V", "org.jetbrains.kotlin:kotlin-stdlib:2.1.0",
        "-V", "org.jetbrains.kotlin:kotlin-stdlib-common:2.1.0",
        "-V", "org.jetbrains.kotlin:kotlin-stdlib-jdk7:2.1.0",
        "-V", "org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.1.0",
        "-V", "androidx.lifecycle:lifecycle-common:2.9.2",
        "-V", "androidx.lifecycle:lifecycle-runtime:2.9.2",
        "-V", "androidx.emoji2:emoji2:1.4.0",
        "-V", "androidx.collection:collection:1.5.0",
        "-V", "androidx.compose.runtime:runtime:1.8.3",
        "-V", "androidx.compose.ui:ui-geometry:1.8.3",
        "-V", "androidx.compose.ui:ui-graphics:1.8.3",
        "-V", "androidx.compose.ui:ui-text:1.8.3",
        "-V", "androidx.compose.ui:ui-unit:1.8.3",
        "-V", "androidx.compose.ui:ui-util:1.8.3",
        "-V", "androidx.lifecycle:lifecycle-viewmodel:2.9.2",
        "-V", "androidx.savedstate:savedstate:1.3.1",
        "-V", "androidx.collection:collection-jvm:1.5.0",
        "-V", "androidx.compose.animation:animation-core:1.8.3",
        "-V", "androidx.activity:activity:1.10.1",
        "-V", "androidx.fragment:fragment:1.8.8",
        "-V", "androidx.compose.material:material-icons-core:1.6.0",
        "-V", "androidx.compose.material:material-ripple:1.7.0",
        "-V", "androidx.lifecycle:lifecycle-livedata:2.6.2",
        "-V", "androidx.lifecycle:lifecycle-livedata-core-ktx:2.9.2",
        "-V", "androidx.lifecycle:lifecycle-livedata-core:2.9.2",
        "-V", "androidx.lifecycle:lifecycle-runtime-ktx:2.9.0",
    ],
)
use_repo(maven, "maven")
